# customer-journey-intelligence-platform

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/agents/: data-platform-architect.md  pyspark-streaming-engineer.md  qa-data-reviewer.md
.github/workflows/: ci.yml
docs/: architecture.md  dashboard.md  data_model.md  data_quality.md  demo_script.md  index.md  operational_runbook.md  pipeline_design.md  portfolio_case_study.md  roadmap.md  runbook.md
infrastructure/: docker-compose.yml
infrastructure/clickhouse/: README.md
infrastructure/clickhouse/init/: 01_database.sql  02_raw_events.sql  03_funnel_metrics.sql  04_session_metrics.sql  05_revenue_events.sql  06_experiment_metrics.sql
infrastructure/redpanda/: README.md
scripts/: wait_for_services.py
src/customer_journey_intel/: __init__.py
src/customer_journey_intel/api/: analytics.py  app.py  models.py
src/customer_journey_intel/common/: __init__.py  logging.py  settings.py
src/customer_journey_intel/contracts/: __init__.py  data_quality.py  events.py
src/customer_journey_intel/dashboard/: __init__.py  (+2 more)
tests/: README.md  conftest.py  test_aggregates.py  test_analytics_repository.py  test_api_app.py  test_clickhouse_api_integration.py  test_clickhouse_schema.py  test_clickhouse_storage.py  test_dashboard.py  test_data_quality.py  test_dedupe.py  test_developer_commands.py  test_dlq.py  test_event_contracts.py  test_event_generator.py  test_operational_hardening.py  test_redpanda_producer.py  test_streaming_job.py  test_streaming_sink.py
(+11 files in other folders)
